TradeMarketing/force-app/main/default/objects/User/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <label>Analyst</label>
    <relationshipName>Analyst</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>