TradeMarketing/force-app/main/default/objects/User/fields/Email_Notification_Repository__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Repository__c</fullName>
    <label>Email Notification Repository</label>
    <type>Email</type>
</CustomField>