TradeMarketing/force-app/main/default/objects/User/fields/External_Supervisor_2__c.field-meta.xml
<CustomField>
    <fullName>External_Supervisor_2__c</fullName>
    <description>Email address of user&#39;s supervisor that does not have Salesforce Access.</description>
    <label>External Supervisor 2</label>
    <type>Email</type>
</CustomField>