TradeMarketing/force-app/main/default/objects/User/fields/External_Supervisor_3__c.field-meta.xml
<CustomField>
    <fullName>External_Supervisor_3__c</fullName>
    <label>External Supervisor 3</label>
    <type>Email</type>
</CustomField>