TradeMarketing/force-app/main/default/objects/User/fields/National_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>National_Sales_Manager__c</fullName>
    <label>National Sales Manager</label>
    <relationshipName>National_Sales_Manager_rel</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>