TradeMarketing/force-app/main/default/objects/User/fields/Regional_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Manager__c</fullName>
    <label>Regional Sales Manager</label>
    <relationshipName>Regional_Sales_Manager_rel</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>