TradeMarketing/force-app/main/default/objects/User/fields/Supervisor_2__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_2__c</fullName>
    <label>Supervisor 2</label>
    <relationshipName>Supervisor2</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>