TradeMarketing/force-app/main/default/objects/User/fields/Supervisor_3__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_3__c</fullName>
    <label>Supervisor 3</label>
    <relationshipName>Supervisor3</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>