TradeMarketing/force-app/main/default/objects/User/fields/Supervisor_4__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_4__c</fullName>
    <label>Supervisor 4</label>
    <relationshipName>Supervisor4</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>